09-ingress/01-image-resolver-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-resolver-api-svc
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
