09-ingress/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: image-resolver-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: image-resolver-api-svc
          servicePort: 80
